// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`base config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`base(v2) config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

import projection_1 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_1 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const name_1 = \\"Items\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

viewModels.push({
  name: name_1
, projection: projection_1
, deserializeState: deserializeState_1
})

export default viewModels
"
`;

exports[`base(v2) config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

import projection_1 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_1 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_1 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const name_1 = \\"Items\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
})

viewModels.push({
  name: name_1
, projection: projection_1
, serializeState: serializeState_1
, deserializeState: deserializeState_1
})

export default viewModels
"
`;

exports[`config with serializeState/deserialzeState works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testDeserializeState.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`config with serializeState/deserialzeState works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testSerializeState.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testDeserializeState.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`config with snapshot + process.env works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`config with snapshot + process.env works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const snapshot_0 = {
  \\"adapter\\": process.env.VIEW_MODEL_TODOS_ADAPTER,
  \\"options\\": {
    \\"size\\": process.env.VIEW_MODEL_TODOS_OPTIONS_SIZE
  }
}
const snapshotAdapter_0 = interopRequireDefault(
  require(snapshot_0.adapter)
).default
const snapshotOptions_0 = snapshot_0.options
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
, snapshot: {
    adapter: snapshotAdapter_0,
    options: snapshotOptions_0 
  }
})

export default viewModels
"
`;

exports[`config with snapshot works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`config with snapshot works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const snapshot_0 = {
  \\"adapter\\": \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testSnapshotAdapter.js\\",
  \\"options\\": {
    \\"size\\": 100
  }
}
const snapshotAdapter_0 = interopRequireDefault(
  require(snapshot_0.adapter)
).default
const snapshotOptions_0 = snapshot_0.options
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
, snapshot: {
    adapter: snapshotAdapter_0,
    options: snapshotOptions_0 
  }
})

export default viewModels
"
`;

exports[`config with validator works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`config with validator works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"
import validator_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testValidator.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
, validator: validator_0
})

export default viewModels
"
`;
